fix rtl scrollbar position padding

--- a/src/sass/jquery.plupload.ui.queue.sass
+++ b/src/sass/jquery.plupload.ui.queue.sass
@@ -121,9 +121,11 @@ div.pluploadUI.queue
           float: right
         div.size, div.progress
           float: left
-      div.header, div.footer
-
       div.footer
         a.button
           margin-left: 0px
           margin-right: 15px
+    &.scrollbarLeft
+      div.header, div.footer
+        padding-right: 5px
+        padding-left: 22px
